syntax = "proto3";

option csharp_namespace = "AIAssistant.GRPC";

package airesponses;

service AiResponser {
  rpc GenerateDailyRaportDescription (MeasurementDescriptionRequest) returns (MeasurementDescriptionResponse);
}

message MeasurementDescriptionRequest {
  string input = 1;
}

message MeasurementDescriptionResponse {
  string description = 1;
}
